--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div id="about">
                 <span style="display:none;"><i class="fas fa-users"></i> &nbsp; null</span>
                 <span style="display:none;"><i class="fas fa-envelope"></i> &nbsp; null</span>
-                <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://martinavagyan.github.io/">https://martinavagyan.github.io/</a></span>
+                <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://yanmart.in">https://yanmart.in</a></span>
                 <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; The Netherlands</span>
                 <span style="display:none;"><i class="fas fa-user-tie"></i> &nbsp;&nbsp; Available for hire</span>
                 <div class="socials">
@@ -36,6 +36,84 @@
       <div id="work">
         <h1>Work.</h1>
         <div class="projects" id="work_section">
+                        <a href="https://github.com/mircealungu/se-course-best-practices" target="_blank">
+                        <section>
+                            <div class="section_title">se-course-best-practices</div>
+                            <div class="about_section">
+                            <span style="display:none;">undefined</span>
+                            </div>
+                            <div class="bottom_section">
+                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
+                                <span><i class="fas fa-star"></i>&nbsp; 5</span>
+                                <span><i class="fas fa-code-branch"></i>&nbsp; 2</span>
+                            </div>
+                        </section>
+                        </a>
+                        <a href="https://github.com/martinavagyan/mean-ts-auth" target="_blank">
+                        <section>
+                            <div class="section_title">mean-ts-auth</div>
+                            <div class="about_section">
+                            <span style="display:block;">MEAN stack boilerplate, TypeScript codebase, Passport.js with JWT authentication</span>
+                            </div>
+                            <div class="bottom_section">
+                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; JavaScript</span>
+                                <span><i class="fas fa-star"></i>&nbsp; 3</span>
+                                <span><i class="fas fa-code-branch"></i>&nbsp; 1</span>
+                            </div>
+                        </section>
+                        </a>
+                        <a href="https://github.com/martinavagyan/angular-material-imports" target="_blank">
+                        <section>
+                            <div class="section_title">angular-material-imports</div>
+                            <div class="about_section">
+                            <span style="display:block;">All angular material inports</span>
+                            </div>
+                            <div class="bottom_section">
+                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
+                                <span><i class="fas fa-star"></i>&nbsp; 1</span>
+                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                            </div>
+                        </section>
+                        </a>
+                        <a href="https://github.com/martinavagyan/lit-element-cli" target="_blank">
+                        <section>
+                            <div class="section_title">lit-element-cli</div>
+                            <div class="about_section">
+                            <span style="display:block;">Tiny CLI for generating Lit Element</span>
+                            </div>
+                            <div class="bottom_section">
+                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; JavaScript</span>
+                                <span><i class="fas fa-star"></i>&nbsp; 1</span>
+                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                            </div>
+                        </section>
+                        </a>
+                        <a href="https://github.com/martinavagyan/node-typescript-api" target="_blank">
+                        <section>
+                            <div class="section_title">node-typescript-api</div>
+                            <div class="about_section">
+                            <span style="display:block;">Node + Express.js + TypeScript + mongoDB</span>
+                            </div>
+                            <div class="bottom_section">
+                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; TypeScript</span>
+                                <span><i class="fas fa-star"></i>&nbsp; 1</span>
+                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                            </div>
+                        </section>
+                        </a>
+                        <a href="https://github.com/zeeguu-ecosystem/Zeeguu-Web" target="_blank">
+                        <section>
+                            <div class="section_title">Zeeguu-Web</div>
+                            <div class="about_section">
+                            <span style="display:block;">Basic Web Client for the Zeeguu Platform</span>
+                            </div>
+                            <div class="bottom_section">
+                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; JavaScript</span>
+                                <span><i class="fas fa-star"></i>&nbsp; 1</span>
+                                <span><i class="fas fa-code-branch"></i>&nbsp; 4</span>
+                            </div>
+                        </section>
+                        </a>
                         <a href="https://github.com/martinavagyan/AlunaGame" target="_blank">
                         <section>
                             <div class="section_title">AlunaGame</div>
@@ -157,7 +235,7 @@
                         <section>
                             <div class="section_title">martinavagyan.github.io</div>
                             <div class="about_section">
-                            <span style="display:block;">about me</span>
+                            <span style="display:none;">undefined</span>
                             </div>
                             <div class="bottom_section">
                                 <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; HTML</span>
@@ -423,84 +501,6 @@
                                 <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; JavaScript</span>
                                 <span><i class="fas fa-star"></i>&nbsp; 0</span>
                                 <span><i class="fas fa-code-branch"></i>&nbsp; 5</span>
-                            </div>
-                        </section>
-                        </a>
-                        <a href="https://github.com/martinavagyan/angular-material-imports" target="_blank">
-                        <section>
-                            <div class="section_title">angular-material-imports</div>
-                            <div class="about_section">
-                            <span style="display:block;">All angular material inports</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 1</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                            </div>
-                        </section>
-                        </a>
-                        <a href="https://github.com/martinavagyan/lit-element-cli" target="_blank">
-                        <section>
-                            <div class="section_title">lit-element-cli</div>
-                            <div class="about_section">
-                            <span style="display:block;">Tiny CLI for generating Lit Element</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; JavaScript</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 1</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                            </div>
-                        </section>
-                        </a>
-                        <a href="https://github.com/martinavagyan/node-typescript-api" target="_blank">
-                        <section>
-                            <div class="section_title">node-typescript-api</div>
-                            <div class="about_section">
-                            <span style="display:block;">Node + Express.js + TypeScript + mongoDB</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; TypeScript</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 1</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                            </div>
-                        </section>
-                        </a>
-                        <a href="https://github.com/zeeguu-ecosystem/Zeeguu-Web" target="_blank">
-                        <section>
-                            <div class="section_title">Zeeguu-Web</div>
-                            <div class="about_section">
-                            <span style="display:block;">Basic Web Client for the Zeeguu Platform</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; JavaScript</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 1</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 4</span>
-                            </div>
-                        </section>
-                        </a>
-                        <a href="https://github.com/martinavagyan/mean-ts-auth" target="_blank">
-                        <section>
-                            <div class="section_title">mean-ts-auth</div>
-                            <div class="about_section">
-                            <span style="display:block;">MEAN stack boilerplate, TypeScript codebase, Passport.js with JWT authentication</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; JavaScript</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 3</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 1</span>
-                            </div>
-                        </section>
-                        </a>
-                        <a href="https://github.com/mircealungu/se-course-best-practices" target="_blank">
-                        <section>
-                            <div class="section_title">se-course-best-practices</div>
-                            <div class="about_section">
-                            <span style="display:none;">undefined</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 5</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 2</span>
                             </div>
                         </section>
                         </a></div>
